DSLMapper/compiler/y.output
Grammar

    0 $accept: Program $end

    1 Program: Stmt
    2        | Program Stmt

    3 Stmt: ProcCustom
    4     | RegionCustom
    5     | LayoutCustom
    6     | InstanceLimit
    7     | MemoryCollect
    8     | FuncDef
    9     | IndexTaskMap
   10     | SingleTaskMap
   11     | ControlReplicate
   12     | Assign_Stmt
   13     | Print_Stmt

   14 Identifier_star: T_Identifier
   15                | '*'

   16 Identifier_star_num: T_Identifier
   17                    | '*'
   18                    | T_IntConstant

   19 Identifier_List: T_Identifier ',' T_Identifier
   20                | Identifier_List ',' T_Identifier

   21 InstanceLimit: T_Instance T_Identifier T_IntConstant ';'

   22 MemoryCollect: T_Collect Identifier_star Identifier_star ';'

   23 ProcCustom: T_Task Identifier_star ProcLst ';'
   24           | T_Task Identifier_List ProcLst ';'

   25 RegionCustom: T_Region Identifier_star Identifier_star_num Proc MemLst ';'
   26             | T_Region Identifier_star Identifier_star_num Identifier_star MemLst ';'

   27 LayoutCustom: T_Layout Identifier_star Identifier_star Mem Constraints ';'
   28             | T_Layout Identifier_star Identifier_star Identifier_star Constraints ';'

   29 Constraints: %empty
   30            | Constraints T_Reverse_Dimension
   31            | Constraints T_Positive_Dimension
   32            | Constraints T_AOS
   33            | Constraints T_SOA
   34            | Constraints T_Compact
   35            | Constraints T_Exact
   36            | Constraints T_Align '<' T_IntConstant
   37            | Constraints T_Align T_Le T_IntConstant
   38            | Constraints T_Align '>' T_IntConstant
   39            | Constraints T_Align T_Ge T_IntConstant
   40            | Constraints T_Align T_Eq T_IntConstant
   41            | Constraints T_Align T_Ne T_IntConstant

   42 FuncDef: T_Def T_Identifier '(' ArgLst ')' '{' Func_Stmts '}'

   43 IndexTaskMap: T_IndexTaskMap Identifier_star T_Identifier ';'
   44             | T_IndexTaskMap Identifier_List T_Identifier ';'
   45             | T_IndexTaskMap T_CPU T_Identifier ';'
   46             | T_IndexTaskMap T_GPU T_Identifier ';'
   47             | T_IndexTaskMap T_OMP T_Identifier ';'

   48 SingleTaskMap: T_SingleTaskMap Identifier_star T_Identifier ';'
   49              | T_SingleTaskMap Identifier_List T_Identifier ';'
   50              | T_SingleTaskMap T_CPU T_Identifier ';'
   51              | T_SingleTaskMap T_GPU T_Identifier ';'
   52              | T_SingleTaskMap T_OMP T_Identifier ';'

   53 ControlReplicate: T_ControlReplicate T_Identifier ';'
   54                 | T_ControlReplicate Identifier_List ';'

   55 Assign_Stmt: T_Identifier '=' Expr ';'

   56 Func_Stmts: Func_Stmt
   57           | Func_Stmts Func_Stmt

   58 Func_Stmt: Assign_Stmt
   59          | Return_Stmt
   60          | Print_Stmt

   61 Return_Stmt: T_Return Expr ';'

   62 Print_Stmt: T_Print '(' T_StringConstant Print_Args ')' ';'

   63 Print_Args: %empty
   64           | Print_Args ',' Expr

   65 ArgLst: %empty
   66       | ArgLst_

   67 ArgLst_: TYPE T_Identifier
   68        | ArgLst_ ',' TYPE T_Identifier

   69 Expr: Expr '+' Expr
   70     | Expr '-' Expr
   71     | Expr '*' Expr
   72     | Expr '/' Expr
   73     | Expr '%' Expr
   74     | Expr '>' Expr
   75     | Expr '<' Expr
   76     | '(' Expr ')'
   77     | Expr T_Ge Expr
   78     | Expr T_Le Expr
   79     | Expr T_Eq Expr
   80     | Expr T_Ne Expr
   81     | Expr T_Or Expr
   82     | Expr T_And Expr
   83     | Expr '(' ExprN_1 ')'
   84     | Expr '[' SliceExpr ']'
   85     | Expr '[' ExprN_1 ']'
   86     | '*'
   87     | '-' Expr
   88     | T_IntConstant
   89     | T_True
   90     | T_False
   91     | T_Identifier
   92     | '(' ExprN ')'
   93     | Proc
   94     | Mem
   95     | Expr '.' Prop
   96     | Expr '?' Expr ':' Expr
   97     | '*' Expr
   98     | T_Tuple '(' Expr T_For T_Identifier T_In Expr ')'

   99 SliceExpr: Expr ':' Expr
  100          | ':' Expr
  101          | Expr ':'
  102          | ':'

  103 ExprN_1: Expr
  104        | ExprN_1 ',' Expr

  105 ExprN: Expr ',' Expr
  106      | ExprN ',' Expr

  107 Prop: T_Size
  108     | T_Split
  109     | T_Merge
  110     | T_Swap
  111     | T_Slice
  112     | T_Reverse
  113     | T_Balance_split
  114     | T_Auto_split
  115     | T_Greedy_split
  116     | T_Volume
  117     | T_Has
  118     | T_Len
  119     | T_TaskIPoint
  120     | T_TaskISpace
  121     | T_TaskParent
  122     | T_TaskProcessor

  123 TYPE: T_Int
  124     | T_Bool
  125     | T_IPoint
  126     | T_ISpace
  127     | T_MSpace
  128     | T_Task

  129 ProcLst: Proc
  130        | ProcLst ',' Proc

  131 MemLst: Mem
  132       | MemLst ',' Mem

  133 Mem: T_SYSMEM
  134    | T_FBMEM
  135    | T_RDMEM
  136    | T_ZCMEM
  137    | T_SOCKMEM
  138    | T_VIRTUAL

  139 Proc: T_CPU
  140     | T_GPU
  141     | T_IO
  142     | T_PY
  143     | T_PROC
  144     | T_OMP


Terminals, with rules where they appear

    $end (0) 0
    '!' (33)
    '%' (37) 73
    '(' (40) 42 62 76 83 92 98
    ')' (41) 42 62 76 83 92 98
    '*' (42) 15 17 71 86 97
    '+' (43) 69
    ',' (44) 19 20 64 68 104 105 106 130 132
    '-' (45) 70 87
    '.' (46) 95
    '/' (47) 72
    ':' (58) 96 99 100 101 102
    ';' (59) 21 22 23 24 25 26 27 28 43 44 45 46 47 48 49 50 51 52 53 54 55 61 62
    '<' (60) 36 75
    '=' (61) 55
    '>' (62) 38 74
    '?' (63) 96
    '[' (91) 84 85
    ']' (93) 84 85
    '{' (123) 42
    '}' (125) 42
    error (256)
    T_Size (258) 107
    T_Split (259) 108
    T_Merge (260) 109
    T_Swap (261) 110
    T_Slice (262) 111
    T_Reverse (263) 112
    T_Balance_split (264) 113
    T_Auto_split (265) 114
    T_Greedy_split (266) 115
    T_Volume (267) 116
    T_Has (268) 117
    T_Tuple (269) 98
    T_For (270) 98
    T_In (271) 98
    T_Len (272) 118
    T_TaskIPoint (273) 119
    T_TaskISpace (274) 120
    T_TaskParent (275) 121
    T_TaskProcessor (276) 122
    T_SingleTaskMap (277) 48 49 50 51 52
    T_Reverse_Dimension (278) 30
    T_Positive_Dimension (279) 31
    T_AOS (280) 32
    T_SOA (281) 33
    T_Compact (282) 34
    T_Align (283) 36 37 38 39 40 41
    T_Exact (284) 35
    T_CPU (285) 45 50 139
    T_GPU (286) 46 51 140
    T_IO (287) 141
    T_PY (288) 142
    T_PROC (289) 143
    T_OMP (290) 47 52 144
    T_SYSMEM (291) 133
    T_FBMEM (292) 134
    T_RDMEM (293) 135
    T_ZCMEM (294) 136
    T_SOCKMEM (295) 137
    T_VIRTUAL (296) 138
    T_Int (297) 123
    T_Bool (298) 124
    T_IPoint (299) 125
    T_ISpace (300) 126
    T_MSpace (301) 127
    T_Def (302) 42
    T_Return (303) 61
    T_True (304) 89
    T_False (305) 90
    T_Task (306) 23 24 128
    T_Region (307) 25 26
    T_Layout (308) 27 28
    T_IndexTaskMap (309) 43 44 45 46 47
    T_Print (310) 62
    T_Instance (311) 21
    T_Collect (312) 22
    T_ControlReplicate (313) 53 54
    T_Le (314) 37 78
    T_Ge (315) 39 77
    T_Eq (316) 40 79
    T_Ne (317) 41 80
    T_And (318) 82
    T_Or (319) 81
    T_Identifier <string> (320) 14 16 19 20 21 42 43 44 45 46 47 48 49 50 51 52 53 55 67 68 91 98
    T_StringConstant <string> (321) 62
    T_IntConstant <intVal> (322) 18 21 36 37 38 39 40 41 88


Nonterminals, with rules where they appear

    $accept (88)
        on left: 0
    Program <program> (89)
        on left: 1 2
        on right: 0 2
    Stmt <stmt> (90)
        on left: 3 4 5 6 7 8 9 10 11 12 13
        on right: 1 2
    Identifier_star <string> (91)
        on left: 14 15
        on right: 22 23 25 26 27 28 43 48
    Identifier_star_num <string> (92)
        on left: 16 17 18
        on right: 25 26
    Identifier_List <stringlist> (93)
        on left: 19 20
        on right: 20 24 44 49 54
    InstanceLimit <instancelimit> (94)
        on left: 21
        on right: 6
    MemoryCollect <memorycollect> (95)
        on left: 22
        on right: 7
    ProcCustom <proccustom> (96)
        on left: 23 24
        on right: 3
    RegionCustom <regioncustom> (97)
        on left: 25 26
        on right: 4
    LayoutCustom <layoutcustom> (98)
        on left: 27 28
        on right: 5
    Constraints <constraints> (99)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 27 28 30 31 32 33 34 35 36 37 38 39 40 41
    FuncDef <funcdef> (100)
        on left: 42
        on right: 8
    IndexTaskMap <indextaskmap> (101)
        on left: 43 44 45 46 47
        on right: 9
    SingleTaskMap <singletaskmap> (102)
        on left: 48 49 50 51 52
        on right: 10
    ControlReplicate <controlreplicate> (103)
        on left: 53 54
        on right: 11
    Assign_Stmt <assign> (104)
        on left: 55
        on right: 12 58
    Func_Stmts <funcstmt> (105)
        on left: 56 57
        on right: 42 57
    Func_Stmt <stmt> (106)
        on left: 58 59 60
        on right: 56 57
    Return_Stmt <returnstmt> (107)
        on left: 61
        on right: 59
    Print_Stmt <printstmt> (108)
        on left: 62
        on right: 13 60
    Print_Args <printargs> (109)
        on left: 63 64
        on right: 62 64
    ArgLst <args> (110)
        on left: 65 66
        on right: 42
    ArgLst_ <args> (111)
        on left: 67 68
        on right: 66 68
    Expr <expr> (112)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
        on right: 55 61 64 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 87 95 96 97 98 99 100 101 103 104 105 106
    SliceExpr <sliceexpr> (113)
        on left: 99 100 101 102
        on right: 84
    ExprN_1 <exprn> (114)
        on left: 103 104
        on right: 83 85 104
    ExprN <exprn> (115)
        on left: 105 106
        on right: 92 106
    Prop <prop> (116)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122
        on right: 95
    TYPE <argtype> (117)
        on left: 123 124 125 126 127 128
        on right: 67 68
    ProcLst <proclst> (118)
        on left: 129 130
        on right: 23 24 130
    MemLst <memlst> (119)
        on left: 131 132
        on right: 25 26 132
    Mem <mem> (120)
        on left: 133 134 135 136 137 138
        on right: 27 94 131 132
    Proc <proc> (121)
        on left: 139 140 141 142 143 144
        on right: 25 93 129 130


State 0

    0 $accept: . Program $end

    T_SingleTaskMap     shift, and go to state 1
    T_Def               shift, and go to state 2
    T_Task              shift, and go to state 3
    T_Region            shift, and go to state 4
    T_Layout            shift, and go to state 5
    T_IndexTaskMap      shift, and go to state 6
    T_Print             shift, and go to state 7
    T_Instance          shift, and go to state 8
    T_Collect           shift, and go to state 9
    T_ControlReplicate  shift, and go to state 10
    T_Identifier        shift, and go to state 11

    Program           go to state 12
    Stmt              go to state 13
    InstanceLimit     go to state 14
    MemoryCollect     go to state 15
    ProcCustom        go to state 16
    RegionCustom      go to state 17
    LayoutCustom      go to state 18
    FuncDef           go to state 19
    IndexTaskMap      go to state 20
    SingleTaskMap     go to state 21
    ControlReplicate  go to state 22
    Assign_Stmt       go to state 23
    Print_Stmt        go to state 24


State 1

   48 SingleTaskMap: T_SingleTaskMap . Identifier_star T_Identifier ';'
   49              | T_SingleTaskMap . Identifier_List T_Identifier ';'
   50              | T_SingleTaskMap . T_CPU T_Identifier ';'
   51              | T_SingleTaskMap . T_GPU T_Identifier ';'
   52              | T_SingleTaskMap . T_OMP T_Identifier ';'

    T_CPU         shift, and go to state 25
    T_GPU         shift, and go to state 26
    T_OMP         shift, and go to state 27
    T_Identifier  shift, and go to state 28
    '*'           shift, and go to state 29

    Identifier_star  go to state 30
    Identifier_List  go to state 31


State 2

   42 FuncDef: T_Def . T_Identifier '(' ArgLst ')' '{' Func_Stmts '}'

    T_Identifier  shift, and go to state 32


State 3

   23 ProcCustom: T_Task . Identifier_star ProcLst ';'
   24           | T_Task . Identifier_List ProcLst ';'

    T_Identifier  shift, and go to state 28
    '*'           shift, and go to state 29

    Identifier_star  go to state 33
    Identifier_List  go to state 34


State 4

   25 RegionCustom: T_Region . Identifier_star Identifier_star_num Proc MemLst ';'
   26             | T_Region . Identifier_star Identifier_star_num Identifier_star MemLst ';'

    T_Identifier  shift, and go to state 35
    '*'           shift, and go to state 29

    Identifier_star  go to state 36


State 5

   27 LayoutCustom: T_Layout . Identifier_star Identifier_star Mem Constraints ';'
   28             | T_Layout . Identifier_star Identifier_star Identifier_star Constraints ';'

    T_Identifier  shift, and go to state 35
    '*'           shift, and go to state 29

    Identifier_star  go to state 37


State 6

   43 IndexTaskMap: T_IndexTaskMap . Identifier_star T_Identifier ';'
   44             | T_IndexTaskMap . Identifier_List T_Identifier ';'
   45             | T_IndexTaskMap . T_CPU T_Identifier ';'
   46             | T_IndexTaskMap . T_GPU T_Identifier ';'
   47             | T_IndexTaskMap . T_OMP T_Identifier ';'

    T_CPU         shift, and go to state 38
    T_GPU         shift, and go to state 39
    T_OMP         shift, and go to state 40
    T_Identifier  shift, and go to state 28
    '*'           shift, and go to state 29

    Identifier_star  go to state 41
    Identifier_List  go to state 42


State 7

   62 Print_Stmt: T_Print . '(' T_StringConstant Print_Args ')' ';'

    '('  shift, and go to state 43


State 8

   21 InstanceLimit: T_Instance . T_Identifier T_IntConstant ';'

    T_Identifier  shift, and go to state 44


State 9

   22 MemoryCollect: T_Collect . Identifier_star Identifier_star ';'

    T_Identifier  shift, and go to state 35
    '*'           shift, and go to state 29

    Identifier_star  go to state 45


State 10

   53 ControlReplicate: T_ControlReplicate . T_Identifier ';'
   54                 | T_ControlReplicate . Identifier_List ';'

    T_Identifier  shift, and go to state 46

    Identifier_List  go to state 47


State 11

   55 Assign_Stmt: T_Identifier . '=' Expr ';'

    '='  shift, and go to state 48


State 12

    0 $accept: Program . $end
    2 Program: Program . Stmt

    $end                shift, and go to state 49
    T_SingleTaskMap     shift, and go to state 1
    T_Def               shift, and go to state 2
    T_Task              shift, and go to state 3
    T_Region            shift, and go to state 4
    T_Layout            shift, and go to state 5
    T_IndexTaskMap      shift, and go to state 6
    T_Print             shift, and go to state 7
    T_Instance          shift, and go to state 8
    T_Collect           shift, and go to state 9
    T_ControlReplicate  shift, and go to state 10
    T_Identifier        shift, and go to state 11

    Stmt              go to state 50
    InstanceLimit     go to state 14
    MemoryCollect     go to state 15
    ProcCustom        go to state 16
    RegionCustom      go to state 17
    LayoutCustom      go to state 18
    FuncDef           go to state 19
    IndexTaskMap      go to state 20
    SingleTaskMap     go to state 21
    ControlReplicate  go to state 22
    Assign_Stmt       go to state 23
    Print_Stmt        go to state 24


State 13

    1 Program: Stmt .

    $default  reduce using rule 1 (Program)


State 14

    6 Stmt: InstanceLimit .

    $default  reduce using rule 6 (Stmt)


State 15

    7 Stmt: MemoryCollect .

    $default  reduce using rule 7 (Stmt)


State 16

    3 Stmt: ProcCustom .

    $default  reduce using rule 3 (Stmt)


State 17
